# SVETlANNa

./: .gitignore  README.md  README.ru.md  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml
Model_VMM/: model_78_v2.pyproj
OptCalc/PVMM/: model_78_v2.py  model_78_v2.sln
docs/source/: conf.py  index.rst  modules.rst  svetlanna.elements.rst  svetlanna.phase_retrieval_problem.rst  svetlanna.rst
examples/: analytical_solutions.py  gaussian_beam_propagation.ipynb  optimize_example.ipynb  optimize_usage_example.ipynb  rectangular_slit_propagation.ipynb  square_aperture_propagation.ipynb  visualization_examples.ipynb  wave_dispersion_slit.ipynb
examples/pipeline/: 01_datasets.ipynb  02_mnist_pipeline.ipynb
examples/pipeline/src/: wf_datasets.py
svetlanna/: __init__.py  beam_generator.py  clerk.py  detector.py  diffractive_rnn.py  elements.py  logging.py  optimize.py  parameters.py  recurrent_reservoir.py  recurrent_setup.py  setup.py  simulation_parameters.py  specs.py  specs_writer.py  transforms.py  units.py  wavefront.py
svetlanna/elements/: __init__.py  aperture.py  diffractive_layer.py  element.py  free_space.py  lens.py  nonlinear_element.py  reservoir.py  slm.py
svetlanna/networks/: diffractive_conv.py
svetlanna/phase_retrieval_problem/: __init__.py  algorithms.py  phase_retrieval.py  phase_retrieval_result.py
svetlanna/specs/: __init__.py  specs.py  specs_writer.py
svetlanna/static/: setup_stepwise_forward_widget.js  setup_widget.css  setup_widget.js
svetlanna/visualization/: __init__.py  widgets.py
svetlanna/visualization/static/: setup_stepwise_forward_widget.js  setup_widget.css  setup_widget.js
svetlanna/visualization/templates/: widget_reservoir.html.jinja
tests/: test_analytic.py  test_axes_math.py  test_clerk.py  test_detector.py  test_device.py  test_element.py  test_elements.py  test_freespace.py  test_fresnel.py  test_lens.py  test_lightpipes_comparison.py  test_logging.py  test_nonlinear_element.py  test_parameters.py  test_phase_retrieval.py  test_setup.py  test_slm.py  test_specs.py  test_specs_writer.py  test_types.py  test_visualization.py  test_wavefront.py  tets_drnn.py
